[package]
name = "Ad-fil_Blocker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version = "0.14.25", features = ["full"]}
tokio = {version = "1.26.0", features = ["full"]}
tower = {version = "0.4", features = ["full"]}
futures = "0.3"
tokio-util = "0.7.8"